--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ permalink   : /:categories/:year/:title/
 markdown    : kramdown
 highlighter : pygments
 
-paginate: 2 #6
+paginate: 4
 comments: true
 paginate_path: "/page/:num"
 
@@ -13,30 +13,23 @@ sass:
   style: compressed
 
 # Site settings
-title: Lora
-description: "A free Jekyll theme"
-email: your-email@domain.com
+title: dstreet
+description: "Musings on development"
+email: street.davide@gmail.com
 baseurl: "" # the subpath of your site, e.g. /blog/
-#url: "http://yourdomain.com"
-url: "http://nandomoreira.me/lora"
-repository: "https://github.com/nandomoreirame/lora"
-disqus_shortname: "fernandomoreira"
-google_analytics: UA-52446115-1
+repository: "https://github.com/dstreet"
+url: "https://dstreet.github.io"
+disqus_shortname: "davidstreetdesigns"
+google_analytics: UA-7286719-5
 
 # social footer
 social:
   github:
     slug: github
-    link: http://github.com/nandomoreirame
-  facebook:
-    slug: facebook
-    link: http://facebook.com/fernando.dev
+    link: http://github.com/dstreet
   twitter:
     slug: twitter
-    link: http://twitter.com/nandomoreirame
-  instagram:
-    slug: instagram
-    link: http://instagram.com/nandomoreira.me
+    link: http://twitter.com/open_dave
   linkedin:
     slug: linkedin
-    link: http://linkedin.com/in/nandomoreirame
+    link: http://linkedin.com/in/david-street-552b7563
